* Add basic support for user login through API using devise * All API requests will be required to pass an 'Auth Token'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
          <span>eMOP Dashboard</span>
          <div style="clear: both"></div>
       </div>
-
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
       
       <% if !@juxta.nil? && @juxta == true %>
