* Initial commit of activeadmin code * Use kaminari for pagination since bundled with activeadmin

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require jquery.dataTables
  *= require_self
  *= require sidebyside
- *= require_tree .
+ *= require_directory .
  */
 body {
    margin: 0;
