--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,12 @@
       <span id="types-json" style="display: none"><%= ActiveSupport::JSON.encode( @job_types ) %></span>
       <span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
       <span id="batches-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
-
+<% unless devise_controller? -%>
       <%= render :partial => '/common/resubmit_confirm_popup' %>
       <%= render :partial => '/common/new_batch_popup' %>
       <%= render :partial => '/common/new_font_popup' %>
       <%= render :partial => '/common/set_font_popup' %>
       <%= render :partial => '/common/wait_popup' %>
+<% end -%>
    </body>
 </html>
