* Add subtotal back to index json API data * Test that the metadata of indexes is correctly returned by API * Minor fix to reserve python API example script

--- a/app/views/api/v1/layouts/index_layout.json.erb
+++ b/app/views/api/v1/layouts/index_layout.json.erb
@@ -1,5 +1,6 @@
 {
   "total": <%= metadata_total.to_json %>,
+  "subtotal": <%= metadata_subtotal.to_json %>,
   "page": <%= metadata_page.to_json %>,
   "per_page": <%= metadata_per_page.to_json %>,
   "total_pages": <%= metadata_total_pages.to_json %>,
