Application View improvement
* Add initial changes to allow flash[:notice] and flash[:alert] to be used along with twitter bootstrap inspirted styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
          <span>eMOP Dashboard</span>
          <div style="clear: both"></div>
       </div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render 'layouts/messages' %>
       <%= yield %>
       
       <% if !@juxta.nil? && @juxta == true %>
