ResultsController refactor and bugfixes
* Fix bug where the text, hocr and juxta results icons would execute javascript when the icons were clicked and disabled
* Fixed sorting so all sortable columns in results table are actually sorted
* Remove all raw SQL queries for ActiveRecord methods
* Removed get_ prefix from action names and updated routes
* Add pp_ecorr postprocess column as proof-of-concept
* Remove redundant methods that generated data used to populate the results table, now the fetch action handles all the possible situations
* Allow pages to be sorted by their status
* Add 'Select Failed' button to select all failed pages
* Actions that deal with reading files from filesystem now handle cases where file doesn't exist
* The #get_page_image action now redirects back to #show and flashes an error if image is not available
* Move code that creates HTML for a page's status to a View helper where it belongs
* Fixup lint offenses using rubocop
* Enhance unit tests to cover more cases
* Unit tests now test that the image matches that of the fixture setup during tests (using Tesseract phototest.tif)

PageResult model changes

* Move the generation of "local" file paths based on database values to the model (was in ResultsController)
* Fixup lint offenses using rubocop

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -17,6 +17,7 @@
    </div>
    <div style="margin: 10px;">
    <input type="button" id="select-all-pages" value="Select All" />
+   <input type="button" id="select-failed-pages" value="Select Failed" />
    <input type="button" id="schedule-pages" value="Schedule Selected" />
    <input type="button" id="set-work-font" value="Set Print Font for Work" />
    </div>
@@ -25,7 +26,7 @@
       <thead>
          <tr>
             <th class="check-col"></th>
-            <th class="icon-col"></th>
+            <th class="icon-col">Status</th>
             <th class="icon-col"></th>
             <th class="icon-col"></th>
             <th class="icon-col"></th>
@@ -33,6 +34,7 @@
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
+            <th class="result-col">ecorr</th>
          </tr>
       </thead>
       <tbody>
