* Add SEASR stats column to results table when viewing a work's page / page results

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -34,7 +34,8 @@
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
-            <th class="result-col">ecorr</th>
+            <th class="result-col">SEASR ecorr</th>
+            <th class="result-col">SEASR stats</th>
          </tr>
       </thead>
       <tbody>
