* Rename postproc_pages column pp_stats to pp_pg_quality ** API was also modified as well as dashboard interface

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -35,7 +35,7 @@
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
             <th class="result-col">SEASR ecorr</th>
-            <th class="result-col">SEASR stats</th>
+            <th class="result-col">Est. Pg. Quality</th>
          </tr>
       </thead>
       <tbody>
