Improved status displays in dashboard interface
* Add blue icon that is used when a JobQueue is processing
* Remove icon from primary dashboard page and use numbers that shows count of pages in each possible state
* Move handling of the HTML generation for status column from controller to a view helper where it belongs

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -118,8 +118,28 @@
 .status-icon.scheduled {
    background-position: 0 -48px;
 }
-
-
+.status-icon.processing {
+  background-position: 0 -64px;
+}
+.status-text.idle {
+  color: gray;
+}
+.status-text.scheduled {
+  color: black;
+}
+.status-text.processing {
+  color: blue;
+}
+.status-text.success {
+  color: green;
+}
+.status-text.failed {
+  color: red;
+}
+.status-text.error {
+  color: red;
+  cursor: pointer;
+}
 
 #dim-overlay {
    z-index: 1000;
