--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,7 +16,7 @@
             <thead>
                <tr>
                   <th class="check-col"></th>
-                  <th class="icon-col"></th>
+                  <th class="medium-col" title="Not Started-Processing-Done-Failed">Status</th>
                   <th class="icon-col"></th>
                   <th class="narrow-col">Data Set</th>
                   <th class="icon-col">ID</th>
