--- a/app/assets/stylesheets/admin/active_admin.css.scss
+++ b/app/assets/stylesheets/admin/active_admin.css.scss
@@ -15,3 +15,9 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+a.action_item {
+  @include light-button;
+  padding: 12px 17px 10px;
+  margin: 0px;
+}
