--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -88,13 +88,30 @@ a.dashboard-back {
    margin: 8px;
 }
 
-#ocr-text-display {
-   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-   box-sizing: border-box;         /* Opera/IE 8+ */
-   width: 100%;
-   height: 90%;
-   margin: 2% 0;
-   outline: 0;
+.ui-dialog .ui-dialog-content, .ui-tabs {
+  padding: 0;
 }
-   
+.ui-dialog-titlebar { display: none; }
+#ocr-view-info { border: 0; }
+
+#ocr-view-info {
+  .tab-content {
+    height: 350px;
+  }
+
+  .file-info {
+    width: 100%;
+    font-size: .8em;
+    padding-bottom: 5px;
+  }
+
+  textarea {
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    width: 100%;
+    height: 90%;
+    margin: 2% 0;
+    outline: 0;
+  }
+}
