--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -88,10 +88,11 @@ a.dashboard-back {
    margin: 8px;
 }
 
-.ui-dialog .ui-dialog-content, .ui-tabs {
+.ocr-view-dialog .ui-dialog-content, .ui-tabs {
   padding: 0;
 }
-.ui-dialog-titlebar { display: none; }
+.ocr-view-dialog .ui-dialog-titlebar { display: none; }
+
 #ocr-view-info { border: 0; }
 
 #ocr-view-info {
