Massive refactor of primary dashboard interface
* Set filter "to" and "from" format in Javascript when retrieving the date values from datepicker
* Fix the Javascript when changing filters to show pending filter changes when any select or input element is modified in filter section
* Condense /dashboard/fetch and /dashboard/export into /dashboard/index
* Remove all the query generation from DashboardController
* Populate data used by primary datatable using DashboardDatatable class
* The DashboardDatatable class is also used by /dashboard/index.csv to export data
* The HTML values used in Datatables response are handled in DashboardHelper
* The select options used for filters are handled in DashboardHelper

Work model changes

* Use includes instead of joins for the named scopes so duplicate records are not returned and to allow eager-loading for improved performance
* Add association of works to batch_jobs through job_queues.
** This association is not yet used by application but may prove useful in removing need for work_ocr_results MySQL VIEW
* The filter logic used by DashboardDatatable and DashboardController#create_batch is now in Work model as #filter_by_params

Cleanup changes

* Remove the ApplicationController method that was setting environment variables re-used only once and in some cases never used at all
* Remove HTML elements that put JSON strings of all BatchJob, JobType and OcrEngine records in primary layout and remove associated javascript

--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -4,17 +4,17 @@
       <tr><td class="table-label">Name:</td><td class="table-input"><input type="text" id="new-name"/></td></tr>
       <tr>
          <td class="table-label">Batch Type:</td>
-         <td class="table-input"><%= select_tag "new-type", options_from_collection_for_select(@job_types, :id, :name) %></td>
+         <td class="table-input"><%= select_tag "new-type", options_from_collection_for_select(JobType.all, :id, :name) %></td>
       </tr>
       <tr class="engine-row">
          <td class="table-label">OCR Engine:</td>
-         <td class="table-input"><%= select_tag "new-ocr", options_from_collection_for_select(@engines, :id, :name) %></td>
+         <td class="table-input"><%= select_tag "new-ocr", options_from_collection_for_select(OcrEngine.all, :id, :name) %></td>
       </tr>
       <tr class="font-row">
          <td class="table-label">Font Training Library:</td>
          <td class="table-input">
             <div id="fonts-div">
-               <%= select_tag "new-font", options_from_collection_for_select(@fonts, "id", "font_name") %>
+               <%= select_tag "new-font", options_from_collection_for_select(Font.all, :id, :font_name) %>
                <span id="no-fonts" style="display:none">No fonts defined</span>
                <input id="upload-font" type="button" value="New" />
             </div>
