--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -4,52 +4,26 @@
    <div id='filter-left'>
       <p>
         <span class="filter-label">Ground Truth:</span>
-        <select id="gt-filter" name="set-filter">
-          <option value>All</option>
-          <option value="with_gt">With GT</option>
-          <option value="without_gt">Without GT</option>
-        </select>
+        <%= select_tag 'gt-filter', gt_filter_options(@gt_filter), class: 'filter-setting' %>
       </p>
       <p>
          <span class="filter-label">Works:</span>
-         <select id="ocr-filter" name="set-filter" style="width: 204px;">
-            <option value>All</option>
-            <option value="ocr_none" <% if @ocr_filter=="ocr_none" %>selected<%end%> >No OCR</option>
-            <option value="ocr_sched" <% if @ocr_filter=="ocr_sched" %>selected<%end%> >OCR Scheduled</option>
-            <option value="ocr_done" <% if @ocr_filter=="ocr_done" %>selected<%end%> >OCR Complete</option>
-            <option value="ocr_ingest" <% if @ocr_filter=="ocr_ingest" %>selected<%end%> >OCR Ingested</option>
-            <option value="ocr_error" <% if @ocr_filter=="ocr_error" %>selected<%end%> >OCR Errors</option>
-            <option value="ocr_ingest_error" <% if @ocr_filter=="ocr_ingest_error" %>selected<%end%> >OCR Ingest Errors</option>
-         </select>
+         <%= select_tag 'ocr-filter', ocr_filter_options(@ocr_filter), style: 'width: 204px;' %>
       </p>
       <p>
          <span class="filter-label">Data Set:</span>
-         <select id="set-filter"  class="filter-setting" name="set-filter" style="width: 191px;">
-            <option value>All</option>
-            <option value="ECCO" <% if @set_filter=="ECCO" %>selected<%end%> >ECCO</option>
-            <option value="EEBO" <% if @set_filter=="EEBO" %>selected<%end%> >EEBO</option>
-         </select>
+         <%= select_tag 'set-filter', dataset_filter_options(@set_filter), style: 'width: 191px;' %>
       </p>
       <p>
          <span class="filter-label">OCR Batch:</span>
-         <select id="batch-filter" name="batch-filter"  class="filter-setting">
-            <option value>All</option>
-            <% @batches.each do | batch | %>
-               <option value="<%= batch[:id] %>" <% if @batch_filter.to_i==batch[:id] %>selected<%end%> ><%= batch[:id] %> - <%= batch[:name] %></option>
-            <% end %>
-         </select>
+         <%= select_tag 'batch-filter', batch_filter_options(@batch_filter) %>
       </p>
    </div>
    
    <div id='filter-right'>
       <p>
          <span class="filter-label">Print Font:</span>
-         <select id="print-font-filter" name="print-font-filter" class="filter-setting">
-            <option value>All</option>
-            <% @print_fonts.each do | font | %>
-               <option value="<%= font[:pf_id] %>" <% if @print_font_filter.to_i==font[:id] %>selected<%end%> ><%= font[:pf_name] %></option>
-            <% end %>
-         </select>
+         <%= select_tag 'print-font-filter', print_font_filter_options(@print_font_filter) %>
       </p>
       <p class="filter-label" style="margin-top:10px">OCR completed date:</p>
       <p>
