--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,7 +9,7 @@
          <input type="button" id="schedule-selected" value="Schedule Selected" />
          <input type="button" id="schedule-all" value="Schedule All" />
          <input type="button" id="font-all" value="Set Print Font for Selected Works" />
-		<form id="export" action="/dashboard/export.csv" method="get">
+		<form id="export" action="/dashboard/index.csv" method="get">
 		  <input type="submit" value="Export" />
 		</form>
          <table id="detail-table">
