Add version and revision information to layout so visible on application

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -321,3 +321,9 @@ button.close {
   right: -21px;*/
   color: inherit;
 }
+
+div.git-info {
+  font-size: 70%;
+  text-align: center;
+  margin: 0 auto;
+}
