--- a/app/views/api/v1/layouts/index_without_count.json.erb
+++ b/app/views/api/v1/layouts/index_without_count.json.erb
@@ -1,4 +1,5 @@
 {
   "page": <%= metadata_page.to_json %>,
+  "total_pages": <%= metadata_total_pages.to_json %>,
   "<%= "#{root_node_name}" %>": <%= yield %>
 }
