Add WorksCollection model   * A Work now belongs to a WorksCollection   * Update Admin interface to allow management of WorksCollections   * Rename places referring to "set" to "collection" for works   * Update logic for works when determining if something is ECCO or EEBO - now use the WorksCollection association   * Progress on issue #22

--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -11,8 +11,8 @@
          <%= select_tag 'ocr-filter', ocr_filter_options(@ocr_filter), style: 'width: 204px;' %>
       </p>
       <p>
-         <span class="filter-label">Data Set:</span>
-         <%= select_tag 'set-filter', dataset_filter_options(@set_filter), style: 'width: 191px;' %>
+         <span class="filter-label">Collection:</span>
+         <%= select_tag 'collection-filter', collection_filter_options(@collection_filter), style: 'width: 191px;' %>
       </p>
       <p>
          <span class="filter-label">OCR Batch:</span>
