--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,7 +18,7 @@
                   <th class="check-col"></th>
                   <th class="medium-col" title="Not Started-Processing-Done-Failed">Status</th>
                   <th class="icon-col"></th>
-                  <th class="narrow-col">Data Set</th>
+                  <th class="narrow-col">Collection</th>
                   <th class="icon-col">ID</th>
                   <th class="medium-col">TCP Number</th>
                   <th class="title-col">Title</th>
