--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,7 +20,7 @@
                   <th class="icon-col"></th>
                   <th class="narrow-col">Collection</th>
                   <th class="icon-col">ID</th>
-                  <th class="medium-col">TCP Number</th>
+                  <th class="medium-col">GT Number</th>
                   <th class="title-col">Title</th>
                   <th class="author-col">Author</th>
                   <th class="medium-col">Font</th>
