--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
          <input type="button" id="schedule-all" value="Schedule All" />
          <input type="button" id="font-all" value="Set Print Font for Selected Works" />
 		<form id="export" action="/dashboard/index.csv" method="get">
-		  <input type="submit" value="Export" />
+		  <input type="submit" value="Export table" />
 		</form>
          <table id="detail-table">
             <thead>
