Update main dashboard filters to use Ransack
Gem changes: add ransack and jquery-datatables-rails

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require jquery-ui
- *= require jquery.dataTables
+ *= require dataTables/jquery.dataTables
  *= require_self
  *= require sidebyside
  *= require_directory .
