--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -25,5 +25,5 @@
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><textarea id="new-notes"></textarea></td></tr>
    </table>   
    <span id="batch-json" style="display: none"></span>
-   
+   <span id="q" style="display:none"><%= params[:q].to_json %></span>
 </div>
