Fix ransack search

--- a/app/views/dashboard/_condition_fields.html.erb
+++ b/app/views/dashboard/_condition_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="field">
   <%= f.attribute_fields do |a| %>
-    <%= a.attribute_select({associations: [:category]}, {class: 'attribute-select'}) %>
+    <%= a.attribute_select({associations: []}, {class: 'attribute-select'}) %>
   <% end %>
   <%= f.predicate_select %>
   <%= f.value_fields do |v| %>
