Add wks_book_id to primary dashboard interface

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,6 +28,7 @@
                   <th class="icon-col"></th>
                   <th class="narrow-col">Collection</th>
                   <th class="icon-col">ID</th>
+                  <th class="icon-col">Book ID</th>
                   <th class="medium-col">GT Number</th>
                   <th class="title-col">Title</th>
                   <th class="author-col">Author</th>
