Refactor how datatable is setup and defined

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,21 +23,21 @@
          <table id="detail-table" data-source="<%= dashboard_index_path(format: 'json') %>">
             <thead>
                <tr>
-                  <th class="check-col"></th>
-                  <th class="medium-col" title="Not Started-Processing-Done-Failed">Status</th>
-                  <th class="icon-col"></th>
-                  <th class="narrow-col">Collection</th>
-                  <th class="icon-col">ID</th>
-                  <th class="icon-col">Book ID</th>
-                  <th class="medium-col">GT Number</th>
-                  <th class="title-col">Title</th>
-                  <th class="author-col">Author</th>
-                  <th class="medium-col">Font</th>
-                  <th class="date-col">OCR Date</th>               
-                  <th class="medium-col ocr-sched-col">OCR Engine</th>
-                  <th class="author-col ocr-sched-col">OCR Batch</th>
-                  <th class="result-col">Juxta</th>
-                  <th class="result-col">RETAS</th>
+                  <th></th>
+                  <th>Status</th>
+                  <th></th>
+                  <th>Collection</th>
+                  <th>ID</th>
+                  <th>Book ID</th>
+                  <th>GT Number</th>
+                  <th>Title</th>
+                  <th>Author</th>
+                  <th>Font</th>
+                  <th>OCR Date</th>
+                  <th>OCR Engine</th>
+                  <th>OCR Batch</th>
+                  <th>Juxta</th>
+                  <th>RETAS</th>
                </tr>
             </thead>
             <tbody>
