--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -30,6 +30,7 @@
                   <th>ID</th>
                   <th>Book ID</th>
                   <th>GT Number</th>
+                  <th>Language</th>
                   <th>Title</th>
                   <th>Author</th>
                   <th>Font</th>
